Weather Forecasts have been linked to event and requested on creation. Updater is implemented but disabled.

--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
@@ -18,5 +18,6 @@ and open the template in the editor.
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsShort()}" value="AskForecasts short range only" type="submit" ajax="false" styleClass="block" /></h:form>
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsShortLong()}" value="AskForecasts short and long range" type="submit" ajax="false" styleClass="block" /></h:form>
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsAllPossibilities()}" value="AskForecasts for all range combinations" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskUpdateAllEvents()}" value="Update event forecasts" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
