Fixes, add invited in page creation works

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
@@ -30,7 +30,7 @@ and open the template in the editor.
                             </f:facet>
                             
                             <h:outputText value="#{invitation.user.username}" />
-                            invites you to his events:  
+                            invites you to his event:  
                             <p:link value="#{invitation.event.name}" outcome="/protected/event/EventPage.xhtml?eventID=#{invitation.event.id}"></p:link>
                             Would you like to join him?
 
