--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
@@ -21,60 +21,72 @@ and open the template in the editor.
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
         <h:form>
             <p:panel id="privacyPanel" header="Event Editing | creator only" footer="Editing form" style="margin-top:70px" class="panelForm">     
-                <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
+                <h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
 
                     <p:outputLabel value="Name" for="name" />
-                    <p:inputText id="name" value="#{eventEditingBean.event.name}"/>
+                    <p:inputText required="true" id="name" value="#{eventEditingBean.event.name}"/>
+                    <p:message for="name" severity="error"/>
 
                     <p:outputLabel value="Address" for="address" />
-                    <p:inputText id="address" value="#{eventEditingBean.event.address}"/>
+                    <p:inputText required="true" id="address" value="#{eventEditingBean.event.address}"/>
+                    <p:message for="address" severity="error"/>
 
                     <p:outputLabel value="Country" for="country" />
-                    <p:selectOneMenu id="country" value="#{eventEditingBean.selectedCountry}" panelStyle="width:180px"
+                    <p:selectOneMenu required="true" id="country" value="#{eventEditingBean.selectedCountry}" panelStyle="width:180px"
                                      effect="fade" var="city" style="width:160px" filter="true" filterMatchMode="startsWith">
                         <f:selectItems value="#{eventEditingBean.countries}" var="country" itemLabel="#{country}" itemValue="#{country}" />
                         <f:ajax listener="#{eventEditingBean.updateCities}" render="city" />
                     </p:selectOneMenu>
+                    <p:message for="country" severity="error"/>
 
                     <p:outputLabel value="City" for="city"/>
-                    <p:selectOneMenu id="city" value="#{eventEditingBean.event.city}" panelStyle="width:180px"
+                    <p:selectOneMenu required="true" id="city" value="#{eventEditingBean.event.city}" panelStyle="width:180px"
                                      effect="fade" var="city" style="width:160px" filter="true" filterMatchMode="startsWith">
                         <f:selectItems value="#{eventEditingBean.cities}" var="city" itemLabel="#{city}" itemValue="#{city}" />
                     </p:selectOneMenu>
+                    <p:message for="city" severity="error"/>
 
                     <h:outputText value="Description"/>
-                    <p:inputTextarea id="description" rows="5" cols="30" maxlength="250" autoResize="true" value="#{eventEditingBean.event.description}"/>
+                    <p:inputTextarea required="true" id="description" rows="5" cols="30" maxlength="250" autoResize="true" value="#{eventEditingBean.event.description}"/>
+                    <p:message for="description" severity="error"/>
 
                     <h:outputText value="Adverse Conditions: " />
-                    <p:selectManyButton value="#{eventEditingBean.event.adverseConditions}" converter="#{bean.weatherConv}">
-                        <f:selectItems value="#{eventCreatioeventEditingBean.weatherConditions}" />
+                    <p:selectManyButton required="true" id="conditions" value="#{eventEditingBean.event.adverseConditions}" converter="#{bean.weatherConv}">
+                        <f:selectItems value="#{eventEditingBean.weatherConditions}" />
                     </p:selectManyButton>
+                    <p:message for="conditions" severity="error"/>
 
                     <h:outputText value="Event beginning: " />
-                    <p:calendar id="startingTime" value="#{eventEditingBean.event.start}" pattern="yyyy-MM-dd HH:mm:ss" converter="TimeConverter" />  
+                    <p:calendar required="true" id="startingTime" value="#{eventEditingBean.event.start}" pattern="yyyy-MM-dd HH:mm:ss" converter="TimeConverter" /> 
+                    <p:message for="startingTime" severity="error"/> 
 
                     <h:outputText value="Event ending " />
-                        <f:ajax listener="#{eventEditingBean.loadWeatherConditions}" render="weatherForecasts" />
-                    <p:calendar id="endingTime" value="#{eventEditingBean.event.end}" pattern="yyyy-MM-dd HH:mm:ss" converter="TimeConverter"/>  
+                    <p:calendar required="true" id="endingTime" value="#{eventEditingBean.event.end}" pattern="yyyy-MM-dd HH:mm:ss" converter="TimeConverter">
+                        <f:ajax listener="#{eventEditingBean.loadWeatherConditions}" render="weatherCondition" />
+                    </p:calendar>
+                    <p:message for="endingTime" severity="error"/>
 
                     <h:outputText value="Weather Conditions " />
                     <p:ring id="weatherCondition" value="#{eventEditingBean.weatherForecast}" var="weatherForecast" styleClass="image-ring" easing="easeInOutBack">
                         <p:panelGrid columns="1">
-                            <p:graphicImage id="img" name="/WEB-INF/Resources/images/#{weatherForecast.code}.png" />
+                            <p:graphicImage id="img" library="images" name="#{weatherForecast.code}.png" />
                         </p:panelGrid>
                     </p:ring>
+                    <h:outputText value="(not always available)" />
                     
                     <h:outputText value="Location: " />
-                    <p:selectOneButton value="#{eventEditingBean.event.indoor}" converter="#{bean.booleanConv}">
+                    <p:selectOneButton required="true" id="location" value="#{eventEditingBean.event.indoor}" converter="#{bean.booleanConv}">
                         <f:selectItem itemLabel="Indoor" itemValue="true" />
                         <f:selectItem itemLabel="Outdoor" itemValue="false" />
                     </p:selectOneButton>
+                    <p:message for="location" severity="error"/>
 
                     <h:outputText value="Privacy Mode " />
-                    <p:selectOneButton value="#{eventEditingBean.event.privateEvent}" converter="#{bean.booleanConv}">
+                    <p:selectOneButton required="true" id="privacyMod" value="#{eventEditingBean.event.privateEvent}" converter="#{bean.booleanConv}">
                         <f:selectItem itemLabel="Private" itemValue="true" />
                         <f:selectItem itemLabel="Public" itemValue="false" />
                     </p:selectOneButton>
+                    <p:message id="privacyMode" for="privacyMod" severity="error"/>
 
                     <p:commandButton value="Save Editing" icon="ui-icon-check" action="#{eventEditingBean.eventEditing()}" type="submit" ajax="false"/>
                 </h:panelGrid>
