--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
@@ -14,10 +14,9 @@ and open the template in the editor.
         <title>Events System's Suggestions Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-    <body>
+    <h:body>
         <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
-        </div>
         <h:form>
             <p:panel id="privacyPanel" header="Event Suggestion | Creator Mode" footer="suggestions" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
@@ -36,6 +35,6 @@ and open the template in the editor.
                 </h:panelGrid>
             </p:panel>
         </h:form>
-    </body>
+    </h:body>
 </html>
 
