--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageViewer.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageViewer.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
             <ui:include src="/Components/TopBar.xhtml">
             </ui:include>
         </div>
-        <p:panel id="privacyPanel" header="Event " footer="Preview form" style="margin-top:70px" class="panelForm">     
+        <p:panel id="privacyPanel" header="Event " style="margin-top:70px" class="panelForm">     
             <h:panelGrid columns="2" cellpadding="5">
                 <h:outputText value="Here there are all the available informations as far as an event concerns. ">
                 </h:outputText>
