--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
         </div>
         <p:growl/>
         <div>
-            <p:panel id="basic" header="Basic" footer="Movie Details" style="margin-bottom:20px">
+            <p:panel id="basic" header="List of Invitations" style="margin-bottom:20px">
                 <h:panelGrid columns="2" cellpadding="10">
                     <h:form>    
                         <p:dataList value="#{invitationManagementBean.invitations}" var="invitation">
