--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/SettingsEdit.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/SettingsEdit.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
         </div>
         
         <h:form>
-            <p:panel id="privacyPanel" header="Changing Calendar Visibility Setting" footer="Editing form" style="margin-top:70px" class="panelForm">     
+            <p:panel id="privacyPanel" header="Changing Calendar Visibility Setting" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
                     <h:outputText value="Calendar Visibility: " />
                     <p:selectOneButton value="#{settingsEditingBean.editedUser.calendarVisible}">
