--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
@@ -35,7 +35,7 @@ and open the template in the editor.
         </div>
         <div id="container">
             <div id="left">
-                <p:panel id="users" header="List of compatible Users" footer="Users" style="margin-top:70px" class="panelForm">     
+                <p:panel id="users" header="List of compatible Users" style="margin-top:70px" class="panelForm">     
                     <p:dataList value="#{searchBean.users}" var="user">
                         <p:link value="#{user.username}" outcome="/protected/user/UserCalendar.xhtml?username=#{user.username}">
                             <f:param name="username" value="#{user.username}"/>
@@ -48,7 +48,7 @@ and open the template in the editor.
                 </p:panel>
             </div>
             <div id="right">
-                <p:panel id="events" header="Event Editing | creator only" footer="Editing form" style="margin-top:70px" class="panelForm">     
+                <p:panel id="events" header="List of compatible Events" style="margin-top:70px" class="panelForm">     
                     <p:dataList value="#{searchBean.events}" var="event">
                         <p:link value="#{event.id}" outcome="/protected/event/EventPage.xhtml?eventID=#{event.id}">
                             <f:param name="eventID" value="#{event.id}"/>
