--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
         </div>
         <h:form>
             <p:growl/>
-            <p:panel id="privacyPanel" header="Event Creation" footer="Creation form" style="margin-top:70px" class="panelForm">     
+            <p:panel id="privacyPanel" header="Event Creation" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5" id="firstPart">
 
                     <p:outputLabel value="Name:" for="name" />
