--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
@@ -20,7 +20,7 @@ and open the template in the editor.
 
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
         <h:form>
-            <p:panel id="privacyPanel" header="Event Editing | creator only" footer="Editing form" style="margin-top:70px" class="panelForm">     
+            <p:panel id="privacyPanel" header="Event Editing | creator only" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
 
                     <p:outputLabel value="Name" for="name" />
