--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
@@ -18,7 +18,7 @@ and open the template in the editor.
         <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
         <h:form>
-            <p:panel id="privacyPanel" header="Event Suggestion | Creator Mode" footer="suggestions" style="margin-top:70px" class="panelForm">     
+            <p:panel id="privacyPanel" header="Event Suggestion | Creator Mode" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
                     
                     <p:outputLabel value="Name" for="name" />
