without suggested changes

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
@@ -69,10 +69,7 @@ and open the template in the editor.
                 </h:panelGrid>
                 <h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5" id="secondpart">
 
-                    <p:row>
-                        <h:outputText>Insert any number of users to invite writing their usernames separated by commas. (e.g. Username1, Username2, Username3)</h:outputText>
-                    </p:row>
-                    <h:outputText>Participants</h:outputText>
+                    <h:outputText>Participants [e.g user1,user2,..]</h:outputText>
                     <p:inputTextarea rows="6" cols="33" value="#{eventCreationBean.participants}" />
                     <h:outputText>participants could be added even later</h:outputText>
 
