Time 07:09 - Spent all night fixing Web tier bugs on code I'd rather never have to touch.

--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testEvent.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testEvent.xhtml
@@ -15,5 +15,6 @@ and open the template in the editor.
     <body>
         <h:form><p:commandButton action="#{testEvents.test()}" value="Create event with datetime" type="submit" ajax="false" styleClass="block" /></h:form>
         <h:form><p:commandButton action="#{testEvents.testCreateAndForecast()}" value="Test create user, event and get forecasts" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testEvents.testCreateAndAskSuggestion()}" value="Test create user, event and ask suggested change" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
