--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
@@ -19,5 +19,6 @@ and open the template in the editor.
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsShortLong()}" value="AskForecasts short and long range" type="submit" ajax="false" styleClass="block" /></h:form>
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsAllPossibilities()}" value="AskForecasts for all range combinations" type="submit" ajax="false" styleClass="block" /></h:form>
         <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskUpdateAllEvents()}" value="Update event forecasts" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskSuggestion()}" value="Ask suggestion" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
