--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
@@ -34,7 +34,7 @@ and open the template in the editor.
                     <h:outputText value="Mail:" />
                     <h:outputText value="#{settingsBean.email}" />
 
-                    <h:outputText value="Privacy Mod:" />
+                    <h:outputText value="Public calendar:" />
                     <h:outputText value="#{settingsBean.privacyMod}" />
                     
                     <p:row>
