--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
@@ -39,7 +39,7 @@ and open the template in the editor.
                     
                     <p:row>
                         <p:column colspan="2">
-                            <p:commandButton value="edit" action="/protected/personal/SettingsEdit" type="submit" ajax="false" styleClass="block"/>
+                            <p:commandButton value="edit" action="/protected/personal/SettingsEdit?faces-redirect=true" type="submit" ajax="false" styleClass="block"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
