--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
@@ -24,7 +24,9 @@ and open the template in the editor.
             <p:dataTable var="event" value="#{eventManagementBean.events}">
 
                 <p:column headerText="Name">
-                    <p:link value="#{event.name}" outcome="/protected/event/EventPage.xhtml?eventID=#{event.id}"></p:link>
+                    <p:link value="#{event.name}" outcome="/protected/event/EventPage.xhtml?faces-redirect=true&includeViewParams=true">
+                        <f:viewParam name="eventID" value="#{event.id}" />
+                    </p:link>
                 </p:column>
 
                 <p:column headerText="Start">
