With navigation rules with redirect, decline on invitations works , numbers instead of images in eventPage as creator there are two bugs one in EvenViewer bean and I've to check the user calendar

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
@@ -39,7 +39,7 @@ and open the template in the editor.
                         <p:ring id="weatherForecasts" value="#{eventPageCreatorBean.weatherForecasts}" var="weatherForecast" styleClass="image-ring" easing="easeInOutBack">
                             <p:panelGrid columns="1">
                                 #{weatherForecast.forecastStart}
-                                <p:graphicImage value="Resources/images/1.png" />
+                                #{weatherForecast.weatherCondition}
                                 #{weatherForecast.forecastEnd}
                             </p:panelGrid>
                         </p:ring>
