--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendar.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendar.xhtml
@@ -23,7 +23,7 @@ and open the template in the editor.
         </div>
         <h:panelGrid>
             <p:schedule value="#{homeBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" style="width: 90% ; margin:auto; height: 800px"  >
-                <p:ajax event="eventSelect" listener="#{onEventSelectListener.onEventSelect}"/>
+                <p:ajax event="eventSelect" listener="#{onEventListenerHome.onEventSelect}"/>
             </p:schedule>
         </h:panelGrid>
     </body>
