--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/user/UserCalendar.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/user/UserCalendar.xhtml
@@ -24,7 +24,7 @@ and open the template in the editor.
         </div>
         <h:panelGrid>
             <p:schedule value="#{userCalendarBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" style="width: 90% ; margin:auto; height: 800px"  >
-                <p:ajax event="eventSelect" listener="#{onEventSelectListener.onEventSelect}"></p:ajax>
+                <p:ajax event="eventSelect" listener="#{onEventListenerUser.onEventSelect}"></p:ajax>
             </p:schedule>
         </h:panelGrid>
     </body>
