--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
@@ -18,6 +18,9 @@ and open the template in the editor.
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
-        For this event was assigned a private profile.
+        <br/>
+        <br/>
+        <br/>
+        This event is private: only invited users can see its details.
     </body>
 </html>
